@@ -2,6 +2,9 @@
 # Copyright 1999-2008 Gentoo Foundation; 2008 Chris Gianelloni
 # Distributed under the GPL v2
 
+  28 Jul 2008; Chris Gianelloni <wolf31o2@wolf31o2.org> gen_compile.sh:
+  Removed some unused dietlibc code.
+
   28 Jul 2008; Chris Gianelloni <wolf31o2@wolf31o2.org> TODO,
   gen_bootloader.sh, gen_compile.sh, gen_configkernel.sh,
   gen_determineargs.sh, genkernel:
